Update hook, switch peer dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bizniche/react",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "type": "module",
   "main": "dist/react.js",
   "module": "dist/react.js",
@@ -35,7 +35,7 @@
     "vite-plugin-dts": "^3.6.2"
   },
   "peerDependencies": {
-    "@apollo/client": "^3.8.6",
-    "graphql": "^16.8.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
