--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "vite",
     "build": "tsc --p ./tsconfig-build.json && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "publish-changeset": "changeset publish"
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
@@ -21,6 +22,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.2",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
