--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "types": "./dist/main.d.ts",
   "scripts": {
     "dev": "vite",
+    "prepack": "npm run build",
     "build": "tsc --p ./tsconfig-build.json && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
