Update changeset config

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,11 +1,10 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.3.1/schema.json",
-  "changelog": "@changesets/cli/changelog",
+  "changelog": [
+    "@changesets/changelog-github",
+    { "repo": "freshsqueezed/bizniche-react" }
+  ],
   "commit": false,
-  "fixed": [],
-  "linked": [],
-  "access": "restricted",
-  "baseBranch": "main",
-  "updateInternalDependencies": "patch",
-  "ignore": []
+  "access": "public",
+  "baseBranch": "main"
 }
